Add participantController
